Try to fix cmake build for fgpanel without GLUT

--- a/utils/fgpanel/CMakeLists.txt
+++ b/utils/fgpanel/CMakeLists.txt
@@ -2,25 +2,30 @@
 find_package(PNG REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
+if(GLUT_FOUND)
+	message(STATUS "found glut")
 
-add_executable(fgpanel main.cxx
-	FGGLApplication.cxx 
-	FGPanelApplication.cxx 
-	FGPNGTextureLoader.cxx 
-	FGRGBTextureLoader.cxx 
-	FGPanelProtocol.cxx
-	FGFontCache.cxx
-	panel.cxx 
-	panel_io.cxx)
+	add_executable(fgpanel main.cxx
+		FGGLApplication.cxx 
+		FGPanelApplication.cxx 
+		FGPNGTextureLoader.cxx 
+		FGRGBTextureLoader.cxx 
+		FGPanelProtocol.cxx
+		FGFontCache.cxx
+		panel.cxx 
+		panel_io.cxx)
 
-target_link_libraries(fgpanel 
-	-lrt
-	${PNG_LIBRARIES}
-	${GLUT_LIBRARIES}
-	${SIMGEAR_LIBRARIES}
-	${OPENGL_LIBRARIES}
-	${ZLIB_LIBRARIES}
-	${PLIB_LIBRARIES}
-	)
+	target_link_libraries(fgpanel 
+		-lrt
+		${PNG_LIBRARIES}
+		${GLUT_LIBRARIES}
+		${SIMGEAR_LIBRARIES}
+		${OPENGL_LIBRARIES}
+		${ZLIB_LIBRARIES}
+		${PLIB_LIBRARIES}
+		)
 
-install(TARGETS fgpanel RUNTIME DESTINATION bin)
+	install(TARGETS fgpanel RUNTIME DESTINATION bin)
+else()
+	message(STATUS "glut NOT found, can't build fgpanel")
+endif()
