Bugfixes: 	- Allow the ATC/AI code to start from a non-airport location 	- Windows compilation fixes.

--- a/src/ATCDCL/CMakeLists.txt
+++ b/src/ATCDCL/CMakeLists.txt
@@ -3,7 +3,7 @@ include(FlightGearComponent)
 set(SOURCES
 	ATC.cxx
 	atis.cxx
-	ATCDialog.cxx
+	ATCDialogOld.cxx
 	ATCVoice.cxx
 	ATCmgr.cxx
 	ATCutils.cxx
