--- a/src/ATCDCL/Makefile.am
+++ b/src/ATCDCL/Makefile.am
@@ -3,7 +3,7 @@ noinst_LIBRARIES = libATCDCL.a
 libATCDCL_a_SOURCES = \
 	ATC.hxx ATC.cxx \
 	atis.hxx atis.cxx \
-	ATCDialog.hxx ATCDialog.cxx \
+	ATCDialogOld.hxx ATCDialogOld.cxx \
 	ATCVoice.hxx ATCVoice.cxx \
 	ATCmgr.hxx ATCmgr.cxx \
 	ATCutils.hxx ATCutils.cxx \
