Make sure fgpanel is included in the distribution.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -1,4 +1,4 @@
-DIST_SUBDIRS = GPSsmooth TerraSync Modeller js_server fgadmin xmlgrep propmerge fgviewer
+DIST_SUBDIRS = GPSsmooth TerraSync Modeller js_server fgadmin xmlgrep propmerge fgviewer fgpanel
 
 SUBDIRS = GPSsmooth TerraSync Modeller js_server propmerge fgviewer fgpanel
 
