Add missing files to source distribution.

--- a/src/ATCDCL/Makefile.am
+++ b/src/ATCDCL/Makefile.am
@@ -2,11 +2,12 @@ noinst_LIBRARIES = libATCDCL.a
 
 libATCDCL_a_SOURCES = \
 	ATC.hxx ATC.cxx \
-	atis.hxx atis.cxx \
+	atis.hxx atis.cxx atis_lexicon.hxx atis_remap.hxx \
 	ATCDialog.hxx ATCDialog.cxx \
 	ATCVoice.hxx ATCVoice.cxx \
 	ATCmgr.hxx ATCmgr.cxx \
 	ATCutils.hxx ATCutils.cxx \
-	ATCProjection.hxx ATCProjection.cxx
+	ATCProjection.hxx ATCProjection.cxx \
+	
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
