Fix utilities linkage, add OpenThreads

--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(GPSsmooth
 	${WINMM_LIBRARY}
 	${WINSOCK_LIBRARY}
 	${ZLIB_LIBRARIES}
+  ${OPENTHREADS_LIBRARIES}
 	${RT_LIBRARY}
 )
 
@@ -25,6 +26,7 @@ target_link_libraries(MIDGsmooth
 	${SIMGEAR_STRUCTURE_LIBRARY}
 	${SIMGEAR_TIMING_LIBRARY}
 	${SIMGEAR_DEBUG_LIBRARY}
+  ${OPENTHREADS_LIBRARIES}
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
@@ -40,6 +42,7 @@ target_link_libraries(UGsmooth
 	${SIMGEAR_SERIAL_LIBRARY}
 	${SIMGEAR_STRUCTURE_LIBRARY}
 	${SIMGEAR_TIMING_LIBRARY}
+  ${OPENTHREADS_LIBRARIES}
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
