--- a/utils/fgpanel/CMakeLists.txt
+++ b/utils/fgpanel/CMakeLists.txt
@@ -20,6 +20,7 @@ if(GLUT_FOUND)
 		${PNG_LIBRARIES}
 		${GLUT_LIBRARIES}
 		${SIMGEAR_LIBRARIES}
+    ${OPENTHREADS_LIBRARIES}
 		${OPENGL_LIBRARIES}
 		${ZLIB_LIBRARIES}
 		${PLIB_LIBRARIES}
