--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -1,17 +1,17 @@
 
-	
+
 add_executable(terrasync terrasync.cxx)
 
-target_link_libraries(terrasync 
+target_link_libraries(terrasync
 	${SIMGEAR_LIBRARIES}
-  ${OPENTHREADS_LIBRARIES}
 	${ZLIB_LIBRARIES}
-    ${WINSOCK_LIBRARY})
+    ${WINSOCK_LIBRARY}
+    ${RT_LIBRARY})
 
 if(LIBSVN_FOUND)
 	target_link_libraries(terrasync ${LIBSVN_LIBRARIES})
 	set_property(TARGET terrasync APPEND PROPERTY COMPILE_FLAGS "${APR_CFLAGS}")
-	
+
 	IF(APPLE)
 	    set_property(SOURCE terrasync.cxx PROPERTY COMPILE_FLAGS "-iwithsysroot ${LIBSVN_INCLUDE_DIR}")
 	ELSE()
