Make HLA configurable. Permit un-breaking of FlightGear CMake builds on setups with a working HLA RTI installed, accommodating with recent changes to SimGear CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ option(ENABLE_JSBSIM "Set to ON to build FlightGear with JSBSim FDM" ON)
 option(ENABLE_FGADMIN "Set to ON to build FlightGear with FGADMIN" ON)
 option(EVENT_INPUT "Set to ON to build FlightGear with event-based Input support" OFF)
 option(ENABLE_LIBSVN "Set to ON to build FlightGear/terrasync with libsvnclient support" ON)
+option(ENABLE_RTI "Set to ON to build SimGear with RTI support" OFF)
 option(WITH_FGPANEL "Set to ON to build the fgpanel application" ON)
 
 set(MSVC_3RDPARTY_ROOT NOT_FOUND CACHE PATH "Location where the third-party dependencies are extracted")
@@ -178,10 +179,12 @@ endif(HAVE_RT)
 endif(NOT CLOCK_GETTIME_IN_LIBC)
 endif(HAVE_CLOCK_GETTIME)
 
-find_package(RTI)
-if(RTI_FOUND)
-  set(FG_HAVE_HLA 1)
-endif()
+if(ENABLE_RTI)
+    find_package(RTI)
+    if(RTI_FOUND)
+        set(FG_HAVE_HLA 1)
+    endif(RTI_FOUND)
+endif(ENABLE_RTI)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
     set(WARNING_FLAGS -Wall)
