autotools build updated with sgthreads library

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -129,8 +129,8 @@ fgfs_LDFLAGS = $(fgfs_PLIB_FW) $(fgfs_OSG_FW) $(LDFLAGS)
 metar_SOURCES = metar_main.cxx
 
 metar_LDADD = \
-        -lsgenvironment -lsgio -lsgbucket -lsgmisc -lsgstructure -lsgdebug \
-        $(network_LIBS) \
+        -lsgenvironment -lsgio -lsgthreads -lsgbucket -lsgmisc -lsgstructure \
+        -lsgdebug $(network_LIBS) $(thread_LIBS) \
         -lz $(base_LIBS)
 
 
