--- a/src/FDM/YASim/CMakeLists.txt
+++ b/src/FDM/YASim/CMakeLists.txt
@@ -37,7 +37,7 @@ add_executable(yasim yasim-test.cpp)
 
 target_link_libraries(yasim 
 	fgYASim
-	${SIMGEAR_LIBRARIES}
+	${SIMGEAR_CORE_LIBRARIES}
 	${ZLIB_LIBRARIES})
 
 install(TARGETS yasim RUNTIME DESTINATION bin)
