--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -4,12 +4,7 @@ add_executable(MIDGsmooth MIDG-II.cxx MIDG_main.cxx)
 add_executable(UGsmooth UGear.cxx UGear_command.cxx UGear_main.cxx UGear_telnet.cxx)
 
 target_link_libraries(GPSsmooth
-	${SIMGEAR_IO_LIBRARY}
-	${SIMGEAR_MISC_LIBRARY}
-	${SIMGEAR_STRUCTURE_LIBRARY}
-	${SIMGEAR_THREADS_LIBRARY}
-	${SIMGEAR_TIMING_LIBRARY}
-	${SIMGEAR_DEBUG_LIBRARY}
+	${SIMGEAR_CORE_LIBRARIES}
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${ZLIB_LIBRARIES}
@@ -20,13 +15,7 @@ target_link_libraries(GPSsmooth
 )
 
 target_link_libraries(MIDGsmooth
-	${SIMGEAR_IO_LIBRARY}
-	${SIMGEAR_MATH_LIBRARY}
-	${SIMGEAR_SERIAL_LIBRARY}
-	${SIMGEAR_STRUCTURE_LIBRARY}
-	${SIMGEAR_THREADS_LIBRARY}
-	${SIMGEAR_TIMING_LIBRARY}
-	${SIMGEAR_DEBUG_LIBRARY}
+	${SIMGEAR_CORE_LIBRARIES}
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
@@ -35,14 +24,7 @@ target_link_libraries(MIDGsmooth
 )
 
 target_link_libraries(UGsmooth
-	${SIMGEAR_DEBUG_LIBRARY}
-	${SIMGEAR_IO_LIBRARY}
-	${SIMGEAR_MATH_LIBRARY}
-	${SIMGEAR_MISC_LIBRARY}
-	${SIMGEAR_SERIAL_LIBRARY}
-	${SIMGEAR_STRUCTURE_LIBRARY}
-	${SIMGEAR_THREADS_LIBRARY}
-	${SIMGEAR_TIMING_LIBRARY}
+	${SIMGEAR_CORE_LIBRARIES}
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
