--- a/utils/fgpanel/CMakeLists.txt
+++ b/utils/fgpanel/CMakeLists.txt
@@ -18,7 +18,7 @@ if(GLUT_FOUND)
 	target_link_libraries(fgpanel 
 		${PNG_LIBRARIES}
 		${GLUT_LIBRARIES}
-		${SIMGEAR_LIBRARIES}
+		${SIMGEAR_CORE_LIBRARIES}
 		${OPENGL_LIBRARIES}
 		${ZLIB_LIBRARIES}
 		${PLIB_LIBRARIES}
