fgfs and fgpanel need to be linked with the winsock library (on Windows)

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -80,6 +80,7 @@ target_link_libraries(fgfs
 	${ZLIB_LIBRARIES}
 	${PLIB_LIBRARIES}
 	${LIBSVN_LIBRARIES}
+	${WINSOCK_LIBRARY}
 	${RT_LIBRARY})
 
 install(TARGETS fgfs RUNTIME DESTINATION bin)
