cmake: Factor out common simgear dependency libs.
Factor out and use this core simgear depenency
library cmake variable.

--- a/src/FDM/YASim/CMakeLists.txt
+++ b/src/FDM/YASim/CMakeLists.txt
@@ -38,7 +38,7 @@ add_executable(yasim yasim-test.cpp)
 target_link_libraries(yasim 
 	fgYASim
 	${SIMGEAR_CORE_LIBRARIES}
-	${ZLIB_LIBRARIES})
+        ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES})
 
 install(TARGETS yasim RUNTIME DESTINATION bin)
 	
