--- a/utils/fgpanel/CMakeLists.txt
+++ b/utils/fgpanel/CMakeLists.txt
@@ -20,10 +20,8 @@ if(GLUT_FOUND)
 		${GLUT_LIBRARIES}
 		${SIMGEAR_CORE_LIBRARIES}
 		${OPENGL_LIBRARIES}
-		${ZLIB_LIBRARIES}
 		${PLIB_LIBRARIES}
-		${WINSOCK_LIBRARY}
-		${RT_LIBRARY}
+		${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 		)
 
 	install(TARGETS fgpanel RUNTIME DESTINATION bin)
