--- a/utils/fgviewer/CMakeLists.txt
+++ b/utils/fgviewer/CMakeLists.txt
@@ -5,8 +5,8 @@ target_link_libraries(fgviewer
 	${SIMGEAR_LIBRARIES}
 	${OPENSCENEGRAPH_LIBRARIES}
 	${OPENGL_LIBRARIES}
-	${ZLIB_LIBRARIES}
 	${PLIB_LIBRARIES}
-        ${RT_LIBRARY})
+        ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+)
 
 install(TARGETS fgviewer RUNTIME DESTINATION bin)
