--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -71,16 +71,15 @@ endif()
 
 target_link_libraries(fgfs
 	${FG_LIBS}
-	${HLA_LIBRARIES}
 	${SIMGEAR_LIBRARIES}
 	${OPENSCENEGRAPH_LIBRARIES}
 	${OPENAL_LIBRARY}
 	${OPENGL_LIBRARIES}
 	${ALUT_LIBRARY}
-	${ZLIB_LIBRARIES}
 	${PLIB_LIBRARIES}
 	${LIBSVN_LIBRARIES}
-	${WINSOCK_LIBRARY}
-	${RT_LIBRARY})
+	${HLA_LIBRARIES}
+	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+)
 
 install(TARGETS fgfs RUNTIME DESTINATION bin)
