New version of JSBSim, a big rewrite.

--- a/src/FDM/JSBSim/models/Makefile.am
+++ b/src/FDM/JSBSim/models/Makefile.am
@@ -7,12 +7,12 @@ libModels_a_SOURCES = FGAerodynamics.cpp FGAircraft.cpp FGAtmosphere.cpp \
                       FGInertial.cpp FGBuoyantForces.cpp FGExternalForce.cpp \
                       FGLGear.cpp FGMassBalance.cpp FGModel.cpp FGOutput.cpp \
                       FGPropagate.cpp FGPropulsion.cpp FGInput.cpp \
-                      FGExternalReactions.cpp FGGasCell.cpp
+                      FGExternalReactions.cpp FGGasCell.cpp FGAccelerations.cpp
 
 noinst_HEADERS = FGAerodynamics.h FGAircraft.h FGAtmosphere.h FGAuxiliary.h \
                  FGFCS.h FGGroundReactions.h FGInertial.h FGLGear.h \
                  FGMassBalance.h FGBuoyantForces.h FGExternalForce.h \
                  FGModel.h FGOutput.h FGPropagate.h FGPropulsion.h FGInput.h \
-                 FGExternalReactions.h FGGasCell.h
+                 FGExternalReactions.h FGGasCell.h FGAccelerations.h
 
 INCLUDES = -I$(top_srcdir)/src/FDM/JSBSim
