--- a/src/FDM/JSBSim/math/Makefile.am
+++ b/src/FDM/JSBSim/math/Makefile.am
@@ -6,6 +6,6 @@ libMath_a_SOURCES = FGColumnVector3.cpp FGFunction.cpp FGLocation.cpp FGMatrix33
 
 noinst_HEADERS = FGColumnVector3.h FGFunction.h FGLocation.h FGMatrix33.h \
                  FGParameter.h FGPropertyValue.h FGQuaternion.h FGRealValue.h FGTable.h  \
-                 FGCondition.h FGRungeKutta.h FGModelFunctions.h
+                 FGCondition.h FGRungeKutta.h FGModelFunctions.h LagrangeMultiplier.h
 
 INCLUDES = -I$(top_srcdir)/src/FDM/JSBSim
