--- a/src/FDM/JSBSim/models/atmosphere/Makefile.am
+++ b/src/FDM/JSBSim/models/atmosphere/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libAtmosphere.a
 
-libAtmosphere_a_SOURCES = FGMSIS.cpp FGMSISData.cpp FGMars.cpp
+libAtmosphere_a_SOURCES = FGMSIS.cpp FGMSISData.cpp FGMars.cpp FGStandardAtmosphere.cpp FGWinds.cpp
 
-noinst_HEADERS = FGMSIS.h FGMars.h
+noinst_HEADERS = FGMSIS.h FGMars.h FGStandardAtmosphere.h FGWinds.h
 
 INCLUDES = -I$(top_srcdir)/src/FDM/JSBSim
