--- a/src/FDM/JSBSim/models/flight_control/Makefile.am
+++ b/src/FDM/JSBSim/models/flight_control/Makefile.am
@@ -2,13 +2,13 @@ noinst_LIBRARIES = libFlightControl.a
 
 libFlightControl_a_SOURCES = \
 	FGPID.cpp FGDeadBand.cpp FGFCSComponent.cpp \
-	FGFilter.cpp FGGain.cpp FGGradient.cpp FGKinemat.cpp \
+	FGFilter.cpp FGGain.cpp FGKinemat.cpp \
 	FGSummer.cpp FGSwitch.cpp FGFCSFunction.cpp FGSensor.cpp \
 	FGActuator.cpp FGAccelerometer.cpp FGGyro.cpp FGMagnetometer.cpp
 
 noinst_HEADERS = \
 	FGPID.h FGDeadBand.h FGFCSComponent.h FGFilter.h \
-	FGGain.h FGGradient.h FGKinemat.h FGSummer.h FGSwitch.h FGFCSFunction.h\
+	FGGain.h FGKinemat.h FGSummer.h FGSwitch.h FGFCSFunction.h\
 	FGSensor.h FGActuator.h FGAccelerometer.h FGGyro.h FGMagnetometer.h \
 	FGSensorOrientation.h
 
