Fix VS2008 build after JSBSim update - 2nd try

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -1032,6 +1032,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\FDM\JSBSim\models\atmosphere\FGStandardAtmosphere.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\FDM\JSBSim\models\atmosphere\FGStandardAtmosphere.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\FDM\JSBSim\models\atmosphere\FGWinds.cpp"
 						>
 					</File>
